--- a/package.json
+++ b/package.json
@@ -5,20 +5,23 @@
   "scripts": {
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
-    "lint": "vue-cli-service lint"
+    "lint": "vue-cli-service lint",
+    "test": "npm run lint"
   },
   "dependencies": {
-    "firebase": "^5.0.4",
-    "vue": "^2.5.16"
+    "firebase": "^8.0.0",
+    "vue": "^2.6.11"
   },
   "devDependencies": {
-    "@vue/cli-plugin-babel": "^3.0.0-beta.15",
-    "@vue/cli-plugin-eslint": "^3.0.0-beta.16",
-    "@vue/cli-service": "^3.0.0-beta.15",
+    "@vue/cli-plugin-babel": "~4.5.0",
+    "@vue/cli-plugin-eslint": "~4.5.0",
+    "@vue/cli-service": "~4.5.0",
     "@vue/eslint-config-standard": "^3.0.0-beta.16",
+    "babel-eslint": "^10.1.0",
     "babel-core": "^7.0.0-bridge.0",
     "cross-env": "^5.2.0",
-    "vue-template-compiler": "^2.5.16"
+    "eslint-plugin-vue": "^6.2.2",
+    "vue-template-compiler": "^2.6.11"
   },
   "eslintConfig": {
     "root": true,
