--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
     "lint": "vue-cli-service lint",
-    "test": "npm run lint"
+    "test": "npm run lint && npm run test:unit",
+    "test:unit": "jest"
   },
   "dependencies": {
     "firebase": "^8.0.0",
@@ -17,16 +18,21 @@
     "@vue/cli-plugin-eslint": "~4.5.0",
     "@vue/cli-service": "~4.5.0",
     "@vue/eslint-config-standard": "^3.0.0-beta.16",
-    "babel-eslint": "^10.1.0",
     "babel-core": "^7.0.0-bridge.0",
+    "babel-eslint": "^10.1.0",
+    "babel-jest": "^26.6.3",
     "cross-env": "^5.2.0",
+    "eslint": "^7.12.1",
     "eslint-plugin-vue": "^6.2.2",
+    "jest": "^26.6.1",
+    "vue-jest": "^3.0.7",
     "vue-template-compiler": "^2.6.11"
   },
   "eslintConfig": {
     "root": true,
     "env": {
-      "node": true
+      "node": true,
+      "jest": true
     },
     "extends": [
       "plugin:vue/essential",
