Ajout config debug pour les tests

--- a/package.json
+++ b/package.json
@@ -62,6 +62,7 @@
     "transform": {
       "^.+\\.js$": "babel-jest",
       "^.+\\.vue$": "vue-jest"
-    }
+    },
+    "testEnvironnement": "node"
   }
 }
