--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "cross-env": "^5.2.0",
     "eslint": "^7.12.1",
     "eslint-plugin-vue": "^6.2.2",
+    "flush-promises": "^1.0.2",
     "jest": "^26.6.1",
     "vue-jest": "^3.0.7",
     "vue-template-compiler": "^2.6.11"
